// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExampleMain component renders full body when hasSend=true 1`] = `
"async function main() {
  const wsClient = new HoppscotchClient();
  wsClient.registerMessageHandler(myMessageHandler);
  wsClient.registerErrorHandler(myErrorHandler);
  wsClient.registerOutgoingProcessor(outgoingProcessor);

  try {
    await wsClient.connect();

    for (let i = 0; i < 5; i++) {
      try {
          await wsClient.sendEchoMessage('test');
      } catch (error) {
        console.error('Error while sending message:', error);
      }
      await new Promise(resolve => setTimeout(resolve, 5000));
    }
  } catch (error) {
    console.error('Failed to connect to WebSocket:', error.message);
  } finally {
    await wsClient.close();
  }
}

main();"
`;

exports[`ExampleMain component renders skeleton body when hasSend=false 1`] = `
"async function main() {
  const wsClient = new HoppscotchClient();
  wsClient.registerMessageHandler(myMessageHandler);
  wsClient.registerErrorHandler(myErrorHandler);

  try {
    await wsClient.connect();

  } catch (error) {
    console.error('Failed to connect to WebSocket:', error.message);
  } finally {
    await wsClient.close();
  }
}

main();"
`;
